--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: pdf-toolbox
+name: build-pdf-toolbox
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +18,17 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: go build -v ./...
+      run: |
+        mkdir -p dist
+        GOOS=linux GOARCH=amd64 go build -o dist/pdf-toolbox-linux-amd64 .
+        GOOS=darwin GOARCH=amd64 go build -o dist/pdf-toolbox-mac-amd64 .
+        GOOS=windows GOARCH=amd64 go build -o dist/pdf-toolbox-win-amd64.exe .
 
     - name: Test
       run: go test -v ./...
+
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: pdf-toolbox
+        path: dist/
