--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,16 @@ jobs:
       with:
         name: pdf-toolbox
         path: dist/
+
+    - name: Commit dist directory
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add dist/
+        git commit -m "Update dist artifacts" || echo "No changes to commit"
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
