--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,22 +3,14 @@ name: build-pdf-toolbox
 on:
   push:
     branches: [ "main" ]
-    # Prevent workflow from triggering on dist updates
-    paths-ignore:
-      - 'dist/**'
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
     - uses: actions/checkout@v4
-      with:
-        # Add token authentication
-        token: ${{ secrets.PAT_TOKEN }}
 
     - name: Set up Go
       uses: actions/setup-go@v4
@@ -40,11 +32,4 @@ jobs:
       with:
         name: pdf-toolbox
         path: dist/
-
-    - name: Commit and push changes
-      run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add dist/
-        git commit -m "[automated] Update dist artifacts" || echo "No changes to commit"
-        git push
+        retention-days: 5
