--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'  # Push events to matching v*, i.e. v1.0, v20.15.10
   workflow_dispatch:  # Allow manual triggers
 
 jobs:
@@ -13,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for all tags and branches
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -26,8 +30,8 @@ jobs:
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/pdf-toolbox
           tags: |
-            type=sha,format=long
-            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
